# Talies-Claw

./: .gitignore  LICENSE  README.md  colorize.py  log_parser.py  main.py  main.spec  pyproject.toml  requirements.txt  test_allslain.py  test_colorize.py  test_log_parser.py
.github/workflows/: build.yml  lint.yml  pyinstaller.yml  release.yml  test.yml
data/: __init__.py  locations.py  ships.py  weapons_fps.py  weapons_ship.py
tools/: extract.py
